# stella-gc

./: .gitignore  CMakeLists.txt  README.md
include/: constants.h  debug.h  forward_pointer.h  gc_state.h  runtime_extras.h  utils.h
include/gc/: debug.h  forward_pointers.h  gen0.h  gen1.h  parameters.h  roots.h  state.h  stats.h  utils.h
include/stella/: gc.h  runtime.h
runtime/: epsilon_gc.c
src/: gc.c  stats.c
src/gc/: debug.c  forward_pointers.c  gen0.c  gen1.c  roots.c  stats.c  utils.c
tests/: compare_outputs.py
tests/data/inputs/: id.txt
tests/data/programs/: factorial_covered_recursion.st  id.st
